Fix Widgets alignment with Activity Stream in Streams page (#89)

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/StreamPage/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/StreamPage/Style.less
@@ -24,7 +24,7 @@
           flex: 0 1 320px;
           max-width: 320px;
           padding-left: 10px;
-          padding-top: 20px;
+          padding-top: 10px;
           box-sizing: border-box;
           .v-application {
             margin-bottom: 20px;
